# sfuzz

./: .gdb_history  .gitignore  Cargo.toml  LICENSE.md  README.md  aaa  asm.s  cscope.out  fuzzing.md  graph.dot  lizard  notes.md  notes.txt  oob  oob.c  print.py  tags  test.s  test1  test1.c  test2  test2.c  test_bin  test_bin.c  test_bin_i  tmp_cfg  tmpalloc.rs  todo.md  valloc.rs
docs/: benchmarking.md  code_gen.md  fuzzing.md  memory_management.md
files2/: 2to3-2.7  Xorg  acpi_listen  acyclic  add-apt-repository  alsatplg  apg  apport-cli  apport-collect  apport-unpack  appres  apt  aptdcon  apturl  apturl-gtk  arm2hpdl  atobm  autoheader  autoscan  avahi-set-host-name  bashbug  bdftruncate  bmtoa  bspc  bundle2.7  bundler2.7  bzip2recover  c_rehash  canberra-gtk-play  cancel  catchsegv  cd-iccdump  chacl  chardetect3  chattr  check-language-support  chvt  clear  clear_console  cmdtest  (+414 more)
libs/elfparser/: Cargo.toml
libs/elfparser/src/: lib.rs
resources/: domtree.dot  notes.md  ssa.dot
src/: cfg.rs  config.rs  emulator.rs  irgraph.rs  jit.rs  lib.rs  main.rs  mmu.rs  mutator.rs  pretty_printing.rs  pseudocode.rs  regalloc.rs  riscv.rs  saved.rs  shared.rs  ssa_builder.rs  syscalls.rs
test_cases/: .gdb_history  aa  b.c  cmpcov  cmpcov.c  generated_program  generated_program.c  harder_test  harder_test.c  simple_test  simple_test.c  test2.c  test3  test3.c  vv
tests/: integration_test.rs  output
tools/: scraper.py  trace_full_regs.sh
tools/program_generator/: Cargo.toml  README.md  generated_program  generated_program.c
tools/program_generator/src/: compile.rs  lib.rs  main.rs  rand.rs  rng.rs  types.rs
tools/seeds/: jfdstvncgj
