[package]
name = "sfuzz"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
elfparser = { git = "https://github.com/seal9055/local_crates/", branch = "main" }
my_libs = { git = "https://github.com/seal9055/local_crates/", branch = "main" }
rustc-hash = "1.1.0"
petgraph = "0.6.0"
num-traits = "0.2.14"
byteorder = "1.4.3"
rand = "0.8.4"

[dependencies.iced-x86]
version = "1.15.0"
features = ["code_asm"]
