[package]
name = "sfuzz"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
elfparser = { git = "https://github.com/seal9055/local_crates/", branch = "main" }
my_libs = { git = "https://github.com/seal9055/local_crates/", branch = "main" }
rustc-hash = "1.1.0"
num-traits = "0.2.14"
byteorder = "1.4.3"
fasthash = "0.4.0"
num-format = "0.4.0"
parking_lot = "0.12.0"
rand_xoshiro = "0.6.0"
console = "0.15.0"

[dependencies.iced-x86]
version = "1.15.0"
features = ["code_asm"]
