[package]
name = "sfuzz"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
elfparser = { git = "https://github.com/seal9055/local_crates/", branch = "main" }
my_libs = { git = "https://github.com/seal9055/local_crates/", branch = "main" }
clap = { version = "3.1.18", features = ["derive"] }
rustc-hash = "1.1.0"
num-traits = "0.2.14"
byteorder = "1.4.3"
num-format = "0.4.0"
parking_lot = "0.12.0"
rand_xoshiro = "0.6.0"
console = "0.15.0"
parse_int = "0.6.0"
reqwest = { version = "*", features = ["json"] }
tokio = { version = "1.0.2", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dependencies.iced-x86]
version = "1.15.0"
features = ["code_asm"]

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]

